[package]
name = "parsed-html"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["themahikaishar <themahikaishar@gmail.com"]
description = "A Rust crate for parsing HTML documents. It supports reading HTML documents in an event-based fashion."
repository = "https://github.com/themahikaishar/parsed-html"
license = "GPL-2.0"
readme = "README.md"
include = ["src/**", "README.md"]

[lib]
name = "parsed_html"
path = "src/lib.rs"

[[example]]
name = "main"
path = "examples/main.rs"
